# media-vault

./: .gitignore  QUICKSTART.md  README.md  README.old.md  docker-compose.yml  dockerfile  dockerfile-base  pyproject.toml  requirements.txt
app/: __init__.py  main.py  media_handler.py  routes.py  security.py  video_streaming.py
app/static/: script.js  style.css
app/templates/: base.html  browse.html  error.html  view.html
app/templates/snippets/: breadcrumb-navigation.html  navigation-buttons.html
src/: launch.py
src/media_vault/: __init__.py  utils.py
src/media_vault/auth/: __init__.py  user.py
src/media_vault/content/: __init__.py  item.py
src/media_vault/database/: __init__.py
src/media_vault/static/: script.js  style.css
src/media_vault/templates/: base.html.jinja2  content-file.html.jinja2  content-tree.html.jinja2  content.html.jinja2
src/media_vault/templates/auth/: delete.html.jinja2  login.html.jinja2  register.html.jinja2
src/media_vault/templates/content/: base.html.jinja2  item-list.html.jinja2  item-search.html.jinja2  item-single.html.jinja2  item.html.jinja2  list.html.jinja2
src/media_vault/templates/content/include/: item-list.html.jinja2
